Fix letter alignment and header color in tablet mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 .main-page-color{
-	color: #19c324;
+	color: #ffffff;
 }
 
 .troll{
@@ -44,6 +44,14 @@ body {
 	margin-bottom: 200px;
 }
 
+#introHeader{
+	font-size: 8em;
+	white-space: pre-line;
+	font-style: italic;
+	/* color: #D93333; */
+	margin-top: 250px;
+}
+
 #headerLibre{
 	font-size: 6em;
 	font-style: italic;
@@ -63,7 +71,13 @@ body {
 
 /* Tablet code */
 @media (max-width: 1024px) {
-
+	#paragraphLibre {
+		font-size: 2.5em;
+		max-width: 80%;
+		margin: 5px auto;
+		color: #ffffff;
+		text-align: center;
+	  }
 }
 
 @media (max-width: 1000px){
@@ -89,7 +103,7 @@ body {
 	#headerLibre{
 		font-size: 3em;
 		font-style: italic;
-		color: #D93333;
+		/* color: #D93333; */
 		margin-top: 130px;
 	}
 
